appId: com.anonymous.maestro-template
---
- launchApp
- assertVisible: "Welcome!"
- tapOn: "Explore.*"
- assertVisible: "Explore"
